--- a/css/styles.css
+++ b/css/styles.css
@@ -1,33 +1,40 @@
-
-header{
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px;
 }
 
-header a{
+a{
     text-decoration: none;
+    cursor: pointer;
+}
+
+header nav{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.nav_right_section{
+    width: 250px;
+    height: auto;
+    display: flex;
+    list-style: none;
+    align-items: center;
+    justify-content: center;
+}
+
+.nav_right_section a{
     color: black;
     margin: auto 5px;
 }
-.header_container{
-    display: flex;
-    align-items: center;
-    padding-right: 15px;
-    padding-top: 5px;
-}
 
 .icon-apps{
-    font-size: 28px;
+    font-size: 25px;
     color: gray;
 }
 
 
-.header_container img{
+.nav_right_section img{
     border-radius: 50%;
-    margin: auto 5px;
-    width: 42px;
-    height: 42px;
 }
 
 
@@ -40,7 +47,7 @@ header a{
 }
 
 .container{
-    padding-top: 10%;
+    align-self: center;
     zoom: 1.1;
 }
 
