Responsive background position

--- a/Wikipedia clone/css/styles.css
+++ b/Wikipedia clone/css/styles.css
@@ -258,7 +258,7 @@ header h3{
     background-position: 55px calc(100% - 10px), 175px calc(100% - 10px);
 }
 
-@media (max-width: 1050px){
+@media screen and (max-width: 1050px){
     .item2{
     background-position: 55px calc(100% - 50px), 55px calc(100% - 10px);
     border-bottom: 50px solid white;
